Fix css issues with Project page on mobile

--- a/pages/projects.css
+++ b/pages/projects.css
@@ -13,9 +13,14 @@
     list-style-type: none;
     text-decoration: none;
     display: block;
-    /* width in px so it doesn't resize when window resizes */
-    width: 600px;
-    max-height: 100px;
+    width: 600px; /* width in px so it doesn't resize when window resizes */
+    margin-bottom: 2rem;
+}
+
+@media (max-width: 768px) {
+    .project_link {
+        width: 80vw;
+    }
 }
 
 .project_item {
@@ -26,7 +31,6 @@
                 0 4px 4px rgba(0,0,0,0.12), 
                 0 8px 8px rgba(0,0,0,0.12),
                 0 16px 16px rgba(0,0,0,0.12);
-    margin-bottom: 2rem;
     transition: transform .2s;
 }
 
@@ -44,6 +48,13 @@
     float: left;
 }
 
+@media (max-width: 768px) {
+    .image {
+        width: 2rem;
+        min-width: 6rem;
+    }
+}
+
 .title {
     color: #ffa500;
     font-family: "Roboto", sans-serif;
@@ -51,10 +62,28 @@
     padding-left: 150px;
 }
 
+@media (max-width: 768px) {
+    .title {
+        font-size: 2rem;
+        padding-left: 0.5rem;
+        margin: 0;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
 .desc {
     color: #e7e7e7;
     font-size: 20px;
     padding-left: 150px;
+}
+
+@media (max-width: 768px) {
+    .desc {
+        font-size: 0.8rem;
+        padding-left: 6.5rem;
+    }
 }
 
 .release_info {
@@ -66,8 +95,23 @@
     padding-bottom: 2.45rem;
 }
 
+@media (max-width: 768px) {
+    .release_info {
+        font-size: 0.6rem;
+        padding-bottom: 0.8rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+    }
+}
+
 .word_count {
     display: inline;
     font-style: italic;
     color: #808080;
+}
+
+@media (max-width: 768px) {
+    .word_count {
+        font-size: 0.6rem;
+    }
 }
